// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pb;
option go_package = ".;pb";


// 常量定义
enum Constant {
	Constant_NULL = 0;
	MsgHead_Len = 10;			// 消息头固定长度
	MsgMaxBody_Len = 1024000;	// 最大的消息体长度
}

// App平台类型
enum AppPlantForm {
	AppPlantForm_NULL = 0;

	WechatMinProgram = 1;	// 微信小程序
	Ios = 11;				// 苹果IOS
	Android = 21;			// 安卓平台
}

// 广告位置
enum AdPosition {
	AdPosition_NULL = 0;

	StartUp = 1;	// 启动页
	Main = 11;		// 主页
}

// App渠道
enum AppFrom {
    // 炒股达人
    Android_000 = 0;   // 安卓0渠道
    Android_001 = 1;   // 安卓001渠道
    Android_201 = 201; // 安卓201渠道
    Android_204 = 204; // 安卓204渠道
    Android_205 = 205; // 安卓205渠道
    Android_206 = 206; // 安卓206渠道
    Android_208 = 208; // 安卓208渠道
    Android_209 = 209; // 安卓209渠道
    Android_210 = 210; // 安卓210渠道
    Android_211 = 211; // 安卓211渠道
    Android_212 = 212; // 安卓212渠道
    Android_301 = 301; // 安卓301渠道
    Android_302 = 302; // 安卓302渠道
    Android_601 = 601; // 安卓601渠道

    // K线学院
    Android_1000 = 1000; // 安卓1000渠道
    Android_1204 = 1204; // 安卓1204渠道
    Android_1205 = 1205; // 安卓1205渠道
    Android_1208 = 1208; // 安卓1208渠道
    Android_1212 = 1212; // 安卓1212渠道

	IosAppleStore = 6666;	// 苹果商店下载的App
	Ipad          = 6667;   // Ipad

	WebsiteIos    = 7777;   // 企业网站下载的苹果
	WebsiteAndriod= 7778;   // 企业网站下载的安卓

	WeChatMinProgram = 8888;// 微信小程序
}

// 消息ID
enum MessageId {
	MessageId_NULL = 0;

	// 内部管理命令
	Cmd_Save_Stock2Db = 101;	// 保存缓存已经修改的股票信息到数据库
	Cmd_Make_StockList = 103;	// 生成一个新的股票列表文件

	// 同步
	Sync_S2C_QuoteItem = 1000;	// 同步实时行情
	Sync_S2C_GameProperty = 1002;// 同步玩家游戏属性
	Sync_S2C_GameCounter = 1004;// 同步输赢计数器

	// 行情相关
	Req_QuoteSubscribe = 2001;	// 订阅或取消订阅行情
	Rep_QuoteSubscribe = 2002;	// 订阅或取消订阅行情响应(无响应)
	Req_QuoteQuery = 2003;		// 查询行情
	Rep_QuoteQuery = 2004;		// 查询行情响应
	Req_QuoteEdit  = 2005;		// 编辑行情(废弃)
	Req_StockEdit  = 2007;		// 编辑股票信息(废弃)
	Req_QuoteQueryFuture = 2009;// 查询期货行情
	Rep_QuoteQueryFuture = 2010;// 查询期货行情响应

	// 玩家信息相关
	Req_Game_UploadIcon = 3001;	// 上传头像
	Rep_Game_UploadIcon = 3002;	// 上传头像应答
	Req_Game_EditNick = 3003;	// 更改昵称
	Rep_Game_EditNick = 3004;	// 更改昵称应答
	Req_Game_EditIcon = 3005;	// 更改头像
	Rep_Game_EditIcon = 3006;	// 更改头像应答

	// 游戏相关
	Req_Game_Login = 4001;		// 登录游戏服
	Rep_Game_Login = 4002;		// 登录游戏服应答
	Req_Game_Start = 4003;		// 开始游戏
	Rep_Game_Start = 4004;		// 开始游戏应答
	Req_Game_Over = 4005;		// 結束游戏
	Rep_Game_Over = 4006;		// 結束游戏应答
	Req_Game_QueryGameResult = 4007;	// 查询游戏结果
	Rep_Game_QueryGameResult = 4008;	// 查询游戏结果应答
	Req_Game_SmxlReport = 4009;	// 查询双盲训练月报
	Rep_Game_SmxlReport = 4010;	// 查询双盲训练月报应答
	Req_Game_SmxlReset = 4011;	// 重置双盲训练
	Rep_Game_SmxlReset = 4012;	// 重置双盲训练应答
	Req_Game_GetGameOperation = 4013;	// 查询游戏操作步骤
	Rep_Game_GetGameOperation = 4014;	// 查询游戏操作步骤应答

}

// 错误编码
enum ErrorCode {
	CS_OK = 0;
	CS_UNKNOW = 1;
	CS_SERVER_ERROR = 2;
	CS_INVALID_PARAMETER = 3;
	CS_INVALID_ACCOUNT = 4;
	CS_INVALID_PASSWORD = 5;
}

message MessageHead {
	sfixed32 message_id = 1;	// 消息ID
	sfixed32 message_len = 2;	// 消息总长度（包括包头和包体）
}

message ErrorInfo {
	int32 code = 1;
	string err = 2;
}

message AdClicked {
	int32 uid = 1;		// uid
	int32 pos = 2;		// 广告位置
	string url = 3;		// 广告URL
	AppFrom from = 4;	// 渠道
}

// 空请求
message VoidRequest {
}

// 空响应
message VoidReply {
}

